--- a/client/src/components/Backlog/Backlog.css
+++ b/client/src/components/Backlog/Backlog.css
@@ -16,9 +16,9 @@
     display: flex;
     font-style: normal;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 20px;
     line-height: 120%;
-    /* or 58px */
+    margin-bottom: 1rem;
 
     letter-spacing: -0.03em;
     text-transform: capitalize;
@@ -26,35 +26,33 @@
 }
 
 .content{
-    padding: 0.5rem;
     height: 32rem;
     overflow-x: auto;
     overflow-y: scroll;
 }
 ::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
+  display: none;
+}
+
+/* 
   ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
   }
    
-  /* Handle */
   ::-webkit-scrollbar-thumb {
     background: #F6C927; 
     border-radius: 10px;
   }
   
-  /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #f6c92767; 
   }
+  */
 
 .count{
     background-color: #0A0A1B;
-    width: 3rem;
+    width: 2.5rem;
     height: 2.5rem;
     border-radius: 10px;
     font-size: 20px;
