--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,13 @@ body {
     margin: 1rem;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .navbar{
     width: 15%;
+}
+
+h3{
+    margin-bottom: 2rem;
 }
