--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 body {
     background-color: #21213E;
     color: #E4E4E4;
@@ -15,7 +20,7 @@ body {
 
 .container {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
 }
 
 .apps{
