--- a/client/src/components/NavbarBtns/NavbarBtns.css
+++ b/client/src/components/NavbarBtns/NavbarBtns.css
@@ -9,17 +9,20 @@
 }
 .active{
     background-color: #f6c927;
+    border-radius: 10px;
+    transform: scale(1.05);
 }
 .button:hover{
     background-color: #f6c92773;
 }
+
 .icon{
     width: 30px;
     height: 30px;
     background-repeat: round;
 }
 .backlog-icon {
-    background-image: url(../../Icons/icons8-dashboard-layout-96.png);
+    background-image: url(../../Icons/BacklogIcon.png);
 }
 .sprint-icon {
     background-image: url(../../Icons/icons8-split-table-96.png);
