--- a/client/src/components/kanban/kanban.css
+++ b/client/src/components/kanban/kanban.css
@@ -5,7 +5,7 @@
 }
 
 .section {    
-    background: #121231;
+    background-color: #121231;
     box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.1);
     border-radius: 10px;
     padding: 10px;
