(Patch) kanban.css

--- a/client/src/components/kanban/kanban.css
+++ b/client/src/components/kanban/kanban.css
@@ -1,23 +1,47 @@
-.kanban {
+[data-rbd-droppable-id="board-droppable"] {
+    width: 100%;
     display: flex;
+    gap: 2rem;
+}
+.react-kanban-board{
+    display: flex;
+    flex-direction: row;
     align-items: flex-start;
-    gap: 1rem;
+    justify-content: space-between;
+    width: 100%;
 }
-
-.section {    
+.react-kanban-card{}
+.react-kanban-card-skeleton{}
+.react-kanban-card--dragging{
+    background:#3d3db1;
+    
+}
+.react-kanban-card__description{}
+.react-kanban-card__title{}
+.react-kanban-column{
     background-color: #121231;
-    box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.1);
     border-radius: 10px;
-    padding: 10px;
-
-    width: 18rem;
+    padding: 1rem;
+    width: 22rem;
 }
+.react-kanban-card-adder-form{
 
-.title {    
+}
+.react-kanban-card-adder-button{
+
+}
+.react-kanban-card-adder-form__title{
+
+}
+.react-kanban-card-adder-form__description{
+
+}
+.react-kanban-card-adder-form__button{
+
+}
+.react-kanban-column-header{
     background: #21213E;
-    box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.1);
     border-radius: 10px 10px 0px 0px;
-
     padding: 1rem;
     display: flex;
     font-style: normal;
@@ -27,49 +51,10 @@
     margin-bottom: 1rem;
     letter-spacing: -0.03em;
     text-transform: capitalize;
-    justify-content: space-between;
-    align-items: center;
 }
+.react-kanban-column-header__button{
 
-.content{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
 }
+.react-kanban-column-adder-button{
 
-.count{
-    background-color: #131331;
-    border-radius: 50%;
-    font-size: 15px;
-
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.green{
-    background-color: #36B176;
-;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-}
-.blue{
-    background-color: #3685B1;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-}
-.red{
-    background-color: #EE786C;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-}
-.yellow{
-    background-color: #F6C927;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
 }
