--- a/client/src/components/BoardTest/react-kanban.css
+++ b/client/src/components/BoardTest/react-kanban.css
@@ -1,28 +1,35 @@
-[data-rbd-droppable-id="board-droppable"] {
-    width: 100%;
-    display: flex;
-    gap: 2rem;
-}
 .react-kanban-board{
     display: flex;
-    flex-direction: row;
     align-items: flex-start;
-    justify-content: space-between;
-    width: 100%;
+    gap: 1rem;
 }
-.react-kanban-card{}
-.react-kanban-card-skeleton{}
+.react-kanban-card{
+    padding: 1.5rem 2rem 1.5rem 2rem;
+    background:#21213E;
+    box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.1);
+    border-radius: 5px;
+    color: #F6C927;
+}
+.react-kanban-card-skeleton{
+
+}
 .react-kanban-card--dragging{
     background:#3d3db1;
     
 }
-.react-kanban-card__description{}
-.react-kanban-card__title{}
+.react-kanban-card__description{
+
+}
+.react-kanban-card__title{
+
+}
 .react-kanban-column{
     background-color: #121231;
+    box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.1);
     border-radius: 10px;
-    padding: 1rem;
-    width: 22rem;
+    padding: 10px;
+
+    width: 18rem;
 }
 .react-kanban-card-adder-form{
 
@@ -41,7 +48,9 @@
 }
 .react-kanban-column-header{
     background: #21213E;
+    box-shadow: 0px 20px 70px rgba(86, 89, 146, 0.1);
     border-radius: 10px 10px 0px 0px;
+
     padding: 1rem;
     display: flex;
     font-style: normal;
@@ -51,6 +60,8 @@
     margin-bottom: 1rem;
     letter-spacing: -0.03em;
     text-transform: capitalize;
+    justify-content: space-between;
+    align-items: center;
 }
 .react-kanban-column-header__button{
 
